--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,20 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 70px;
+    background-color: white;
+    color: black;
+    transition: 0.3s ease-in-out;
+}
+
+.dark {
+    background-color: #121212;
+    color: white;
 }
 
 button {
-    padding: 10px 20px;
+    padding: 12px 20px;
     font-size: 18px;
     cursor: pointer;
+    border-radius: 8px;
 }
